--- a/fdams/src/styles/Table.css
+++ b/fdams/src/styles/Table.css
@@ -24,6 +24,7 @@
 .table-header-row {
   display: flex;
   align-items: center; /* Align vertically centered */
+  border-radius: 20px;
 }
 
 .table-header-text:nth-child(1),
@@ -58,24 +59,27 @@
 
 .table-body-row:nth-child(even) {
   background-color: #f9f9f9;
+  border-radius: 20px;
 }
 
 .table-body-row:hover {
   background-color: #e0e0e0;
+  border-radius: 20px;
 }
 
+.star-button,
 .edit-button,
 .delete-button {
   padding: 5px 10px;
   cursor: pointer;
   display: flex;
   align-items: center;
+  margin-right: 5px;
 }
 
 .edit-button {
   background-color: green;
   justify-content: center;
-  margin-right: 5px;
 }
 .delete-button {
   background-color: red;
@@ -83,6 +87,8 @@
 }
 
 .edit-icon,
+.content-icon,
+.content-icon-fill,
 .delete-icon {
   width: 25px;
   margin-right: 5px;
@@ -103,18 +109,24 @@
     width: 100%;
   }
 
+  .star-button,
   .delete-button,
-  .edit-button {    
-    width: 100px;
+  .edit-button {
+    width: 60px;
+    justify-content: center;
   }
 
   .edit-icon,
+  .content-icon,
+  .content-icon-fill,
   .delete-icon {
-    width: 25px;
+    width: 20px;
     margin-right: 5px;
+    align-items: center;
   }
-  
-  .button-text{
+
+  .button-text {
     display: none;
+    text-decoration: none;
   }
 }
