--- a/fdams/src/styles/layout/PageContant.css
+++ b/fdams/src/styles/layout/PageContant.css
@@ -1,10 +1,11 @@
-.display {
+.page-contant {
   display: flex;
   flex-direction: column;
   height: 70vh;
   width: 100%;
 }
-.display-contant-header {
+
+.page-contant-header {
   display: flex;
   height: 10%;
   width: 100%;
@@ -12,7 +13,7 @@
   justify-content: center;
 }
 
-.display-contant-display {
+.page-contant-display {
   display: flex;
   height: 90%;
 }
